refactoring, recalculation level order